sandbox/output
AnagramTest.java:21: error: cannot find symbol
        List<String> result = anagram.generate("ab");
        ^
  symbol:   class List
  location: class AnagramTest
1 error
